Fix bad contrast in advanced search submit button

--- a/app/assets/stylesheets/findingaids.css.scss
+++ b/app/assets/stylesheets/findingaids.css.scss
@@ -82,6 +82,9 @@ button.search-btn {
   background-color: $nyu-purple;
   border-color: $nyu-purple;
 }
+input#advanced-search-submit:hover {
+  color: white;
+}
 
 .toggle_bookmark {
   margin: 0;
